More Advancements and add some changes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -524,7 +524,7 @@
   "item.goety.end_walk_focus": "End Walk Focus",
   "item.goety.end_walk_focus.info": "Renders caster completely invisible. Once effect ends or break, the caster teleports back to where the spell was cast.",
   "item.goety.blink_focus": "Blink Focus",
-  "item.goety.blink_focus.info": "Teleports the caster to a location they're looking at from a certain range.",
+  "item.goety.blink_focus.info": "Teleports the caster to a location, or around a mob, they're looking at from a certain range. Crouch casting will cause the caster to teleport to a random location.",
   "item.goety.tunnel_focus": "Tunnel Focus",
   "item.goety.tunnel_focus.info": "Summons an ethereal tunnel for a short while after right-clicking on a block, allowing entities to walk or fall through.",
   "item.goety.soul_light_focus": "Soul Light Focus",
@@ -1052,13 +1052,15 @@
   "info.goety.necro_crown_cast": "Halves casting time for necromancy spells.",
   "info.goety.amethyst_necklace": "+20% chance summoning four Totemic Bombs casting Barricade spell.",
   "info.goety.amethyst_necklace_discount": "Halves soul cost of geomancy spells.",
-  "info.goety.dark_robe": "Reduces soul cost of all spells by 25%.",
+  "info.goety.dark_robe": "Reduces soul cost of all spells by 5%.",
   "info.goety.grand_robe": "Halves incoming attacks when casting with wand or staff.",
   "info.goety.necro_cape": "Allows undead servants heal using soul energy.",
   "info.goety.necro_cape_power": "Certain newly summoned undead servants gain extra abilities.",
   "info.goety.illusion_robe": "Improves the Mirror spell.",
   "info.goety.frost_robe": "+%s%% resistance to freezing damage, immunity to powder snow.",
   "info.goety.frost_robe_discount": "Halves soul cost of frost spells.",
+  "info.goety.wild_robe": "Immunity to poison and acid venom. Allows natural servants heal using soul energy.",
+  "info.goety.wild_robe_discount": "Halves soul cost of wild spells.",
   "info.goety.wind_robe": "Provides slow fall at a cost of soul energy, immunity to fall damage.",
   "info.goety.wind_robe_discount": "Halves soul cost of wind spells.",
   "info.goety.storm_robe": "+%s%% resistance to shock damage.",
@@ -1066,7 +1068,7 @@
   "info.goety.witch_robe": "+%s%% resistance to magical damage.",
   "info.goety.witch_robe_brew": "Press %s to open robe brewing stand.",
   "info.goety.warlock_garment": "Automatically uses Wartful Eggs when afflicted with negative effect.",
-  "info.goety.warlock_robe": "+%s%% resistance to explosions.",
+  "info.goety.warlock_robe": "+%s%% resistance to explosions. Arthopods are neutral to wearer.",
   "info.goety.ring_of_want": "When enchanted with Wanting, increases looting level when killing with servants or spells.",
   "info.goety.ring_of_the_dragon": "Empowers breathing spells when worn.",
   "info.goety.grave_gloves": "+50% attack speed for Scythes.",
@@ -1116,6 +1118,8 @@
   "info.goety.lichdom.disable": "Lichdom is disabled",
   "info.goety.soul.cost.fail": "Requires %s Soul Energy!",
   "info.goety.research.fail": "You don't have the research for this!",
+  "info.goety.research.already": "You already learned this research!",
+  "info.goety.research.learned": "You have learned this research",
   "info.goety.block.fail": "Inefficient Block Requirements!",
   "info.goety.summon.limit": "You've reached the limit for this summon!",
   "info.goety.apostle.summon": "A dark presence washes over you...",
@@ -1544,6 +1548,8 @@
   "advancements.goety.craft_dark_wand.description": "Craft a Dark Wand",
   "advancements.goety.craft_dark_robe.title": "Look at Me, I'm the Evoker Now",
   "advancements.goety.craft_dark_robe.description": "Dark Hats reduces Casting Time, Dark Robes reduces Soul Costs.",
+  "advancements.goety.craft_animation_core.title": "The Animated Series",
+  "advancements.goety.craft_animation_core.description": "Craft an Animation Core through a Ritual.",
   "advancements.goety.craft_vexing_focus.title": "Vex Production",
   "advancements.goety.craft_vexing_focus.description": "Look out for any Hermits outside of your windows.",
   "advancements.goety.craft_biting_focus.title": "The Floor is Jaws",
@@ -1554,12 +1560,24 @@
   "advancements.goety.craft_pulverize_focus.description": "Craft a Pulverize Focus.",
   "advancements.goety.craft_command_focus.title": "Prostagma?",
   "advancements.goety.craft_command_focus.description": "Craft a Command Focus.",
+  "advancements.goety.craft_fire_breath_focus.title": "Super Spicy",
+  "advancements.goety.craft_fire_breath_focus.description": "Craft a Fire Breath Focus.",
+  "advancements.goety.craft_frost_breath_focus.title": "Taking Menthol",
+  "advancements.goety.craft_frost_breath_focus.description": "Craft a Frost Breath Focus.",
   "advancements.goety.craft_shocking_focus.title": "Shoot From My Fingertips!",
   "advancements.goety.craft_shocking_focus.description": "Craft a Shocking Focus.",
   "advancements.goety.craft_fireball_focus.title": "That's a Spicy Meatball!",
   "advancements.goety.craft_fireball_focus.description": "Craft a Fireball Focus.",
+  "advancements.goety.craft_iceology_focus.title": "Glow Squid's Nightmare",
+  "advancements.goety.craft_iceology_focus.description": "Craft an Iceology Focus.",
+  "advancements.goety.craft_overgrowth_focus.title": "Vine Compilation",
+  "advancements.goety.craft_overgrowth_focus.description": "Craft an Overgrowth Focus.",
   "advancements.goety.craft_telekinesis_focus.title": "I Hath Telekinesis!",
   "advancements.goety.craft_telekinesis_focus.description": "Craft a Telekinesis Focus.",
+  "advancements.goety.craft_tunnel_focus.title": "Tunnel Vision",
+  "advancements.goety.craft_tunnel_focus.description": "Craft a Tunnel Focus.",
+  "advancements.goety.craft_sonic_boom_focus.title": "Check This Out",
+  "advancements.goety.craft_sonic_boom_focus.description": "Craft a Sonic Boom Focus.",
   "advancements.goety.craft_all_focus.title": "Hyperfocus",
   "advancements.goety.craft_all_focus.description": "Geez, that's a lotta Focuses!",
   "advancements.goety.craft_dark_altar.title": "Ran Out of Essentia",
@@ -1596,6 +1614,10 @@
   "advancements.goety.craft_necro_set.description": "Wearing Necro Crown and Cape causes none boss Undead to be Neutral. Necro Staff powers Necromantic Spells.",
   "advancements.goety.craft_illusion_robe.title": "Confuzzle",
   "advancements.goety.craft_illusion_robe.description": "Improves Invisibility effect and Mirror Spells.",
+  "advancements.goety.craft_frost_robe.title": "Looking Cool",
+  "advancements.goety.craft_frost_robe.description": "Frost Robes grants resistance to freeze damage and gives discount to Frost Spells.",
+  "advancements.goety.craft_wild_robe.title": "Where The Wild Things At?",
+  "advancements.goety.craft_wild_robe.description": "Wild Robes grants immunity to Poison and Acid Venom and gives discount to Wild Spells.",
   "advancements.goety.craft_wind_robe.title": "It Wimdy",
   "advancements.goety.craft_wind_robe.description": "Wind Robes slows down descent and gives discount to Wind Spells.",
   "advancements.goety.craft_storm_robe.title": "Oncoming Storm",
@@ -1628,6 +1650,10 @@
   "advancements.goety.kill_minister.description": "Defeated a Minister, the greedy and charismatic Illager chief.",
   "advancements.goety.kill_vizier.title": "Arubian Nights",
   "advancements.goety.kill_vizier.description": "Defeated a Vizier, royal official of the Illagers.",
+  "advancements.goety.servant_kill_mob.title": "Good Soldiers Follow Orders",
+  "advancements.goety.servant_kill_mob.description": "Have a Servant kill a mob.",
+  "advancements.goety.servant_kill_apostle.title": "The Unchosen One",
+  "advancements.goety.servant_kill_apostle.description": "Have a Servant defeat an Apostle.",
   "advancements.goety.respawn_miniboss.title": "Here We Go Again...",
   "advancements.goety.respawn_miniboss.description": "Reactivate certain blocks that summons a powerful mob.",
   "advancements.goety.ravaging_scroll.title": "Ravage And Savage",
@@ -1646,6 +1672,14 @@
   "advancements.goety.floral_scroll.description": "Read the Floral Scroll and discover the way of the florals.",
   "advancements.goety.forbidden_scroll.title": "Grandma's Secret Recipe",
   "advancements.goety.forbidden_scroll.description": "Read the Forbidden Scroll and discover the secrets of Immortality.",
+  "advancements.goety.summon_zombie.title": "Night of the Living Dead",
+  "advancements.goety.summon_zombie.description": "Summon a Zombie Servant.",
+  "advancements.goety.summon_skeleton.title": "A Skeleton Popped Out!",
+  "advancements.goety.summon_skeleton.description": "Summon a Skeleton Servant.",
+  "advancements.goety.summon_wraith.title": "Peek-A-Boo",
+  "advancements.goety.summon_wraith.description": "Summon a Wraith Servant.",
+  "advancements.goety.summon_slime.title": "Kids' Choice Awards",
+  "advancements.goety.summon_slime.description": "Summon a Slime Servant",
   "advancements.goety.summon_whisperer.title": "I Have To Use Stealth Instead!",
   "advancements.goety.summon_whisperer.description": "Summon a Whisperer.",
   "advancements.goety.summon_leapleaf.title": "Leaf It To Me",
@@ -1656,6 +1690,10 @@
   "advancements.goety.summon_redstone_golem.description": "Summon a Redstone Golem with an Animation Core.",
   "advancements.goety.summon_grave_golem.title": "Gravedigger",
   "advancements.goety.summon_grave_golem.description": "Summon a Grave Golem with an Animation Core.",
+  "advancements.goety.summon_golems.title": "Golemancy",
+  "advancements.goety.summon_golems.description": "Summon a Squall, Redstone and Grave Golems.",
+  "advancements.goety.summon_apostle.title": "Judgement Day",
+  "advancements.goety.summon_apostle.description": "Summon an Apostle using the Sabbath Ritual.",
   "advancements.goety.become_lich.title": "I am Beyond Strength",
   "advancements.goety.become_lich.description": "Ascend to Lichdom and become truly immortal!",
 
@@ -1729,6 +1767,8 @@
   "death.attack.goety.phobia.player": "%1$s was spooked whilst fighting %2$s",
   "death.attack.goety.choke": "%1$s was choked by %2$s",
   "death.attack.goety.choke.item": "%1$s was choked by %2$s using %3$s",
+  "death.attack.goety.swarm": "%1$s has been infested by %2$s",
+  "death.attack.goety.swarm.item": "%1$s has been infested by %2$s using %3$s",
   "death.attack.goety.doom": "%1$s met their doom",
   "death.attack.goety.doom.player": "%1$s met their doom whilst fighting %2$s",
   "death.attack.goety.directShock": "%1$s was electrocuted by %2$s",
