--- a/src/main/resources/assets/goety/lang/ja_jp.json
+++ b/src/main/resources/assets/goety/lang/ja_jp.json
@@ -1722,5 +1722,45 @@
   "advancements.goety.summon_whisperer.title": "代わりにステルスを使わなければならない！",
   "advancements.goety.summon_whisperer.description": "ウィスパラーを召喚する",
   "advancements.goety.summon_leapleaf.title": "任せてね",
-  "advancements.goety.summon_leapleaf.description": "アニメーションコアを使用してリープリーフを召喚する"
+  "advancements.goety.summon_leapleaf.description": "アニメーションコアを使用してリープリーフを召喚する",
+  "info.goety.research.already": "あなたはすでにこの研究を学びました!",
+  "advancements.goety.craft_animation_core.title": "アニメシリーズ",
+  "advancements.goety.craft_animation_core.description": "儀式を通じてアニメーションコアを作成する",
+  "advancements.goety.craft_fire_breath_focus.title": "激辛",
+  "advancements.goety.craft_fire_breath_focus.description": "ファイアブレスのフォーカスを作成する",
+  "advancements.goety.craft_frost_breath_focus.title": "メントールを摂取する",
+  "advancements.goety.craft_frost_breath_focus.description": "フロストブレスのフォーカスを作成する",
+  "advancements.goety.craft_iceology_focus.title": "ヒカリイカの悪夢",
+  "advancements.goety.craft_iceology_focus.description": "氷学のフォーカスを作る",
+  "advancements.goety.craft_overgrowth_focus.title": "つるのコンピレーション",
+  "advancements.goety.craft_overgrowth_focus.description": "過成長のフォーカスを作成する",
+  "advancements.goety.craft_tunnel_focus.title": "視野狭窄",
+  "advancements.goety.craft_tunnel_focus.description": "トンネルのフォーカスを作成する",
+  "advancements.goety.craft_sonic_boom_focus.title": "これをチェックしてください",
+  "advancements.goety.craft_sonic_boom_focus.description": "ソニックブームのフォーカスを作成する",
+  "advancements.goety.craft_frost_robe.title": "「クール」な衣装",
+  "advancements.goety.craft_frost_robe.description": "氷のローブは凍結ダメージに対する耐性を与え、フロスト属性呪文を割引する",
+  "advancements.goety.craft_wild_robe.title": "ワイルド・シングスはどこにいる？",
+  "advancements.goety.craft_wild_robe.description": "野生のローブは毒と酸毒に対する免疫を与え、ワイルド属性呪文を割引する",
+  "advancements.goety.servant_kill_mob.title": "優秀な兵士は命令に従う",
+  "advancements.goety.servant_kill_mob.description": "サーヴァントにモブを殺させる",
+  "advancements.goety.servant_kill_apostle.title": "選ばれざる者",
+  "advancements.goety.servant_kill_apostle.description": "従者に使徒を倒してもらう",
+  "advancements.goety.summon_zombie.title": "ナイト・オブ・ザ・リビングデッド",
+  "advancements.goety.summon_zombie.description": "ゾンビの従者を呼ぶ",
+  "advancements.goety.summon_skeleton.title": "骸骨が飛び出た！",
+  "advancements.goety.summon_skeleton.description": "スケルトンの従者を召喚する",
+  "advancements.goety.summon_wraith.title": "いないいないばあ",
+  "advancements.goety.summon_wraith.description": "レイスの従者を召喚する",
+  "advancements.goety.summon_slime.title": "キッズチョイス賞",
+  "advancements.goety.summon_slime.description": "スライムを召喚する",
+  "advancements.goety.summon_golems.title": "ゴレマンシー",
+  "advancements.goety.summon_golems.description": "スコール、レッドストーン、グレイブゴーレムを召喚する",
+  "advancements.goety.summon_apostle.title": "裁きの日",
+  "advancements.goety.summon_apostle.description": "安息日の儀式を使用して使徒を召喚する",
+  "death.attack.goety.swarm": "%1$s は %2$s に感染した",
+  "death.attack.goety.swarm.item": "%1$s は %3$s を使用する %2$s によって感染した",
+  "info.goety.research.learned": "あなたはこの研究を学びました",
+  "info.goety.wild_robe": "毒や酸毒に対する免疫。 自然の奉仕者が魂のエネルギーを使って治癒できるようにします。",
+  "info.goety.wild_robe_discount": "ワイルドスペルのソウルコストが半分になります。"
 }
