Fixed Server Crash and improved Frost Staff

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -155,6 +155,8 @@
   "entity.goety.wither_skull": "Wither Skull",
   "entity.goety.sword":"Flying Sword",
   "entity.goety.ice_spike":"Ice Spike",
+  "entity.goety.ice_spear":"Ice Spear",
+  "entity.goety.ice_storm":"Ice Storm",
   "entity.goety.ghost_arrow":"Arrow",
   "entity.goety.death_arrow":"Death Arrow",
   "entity.goety.harpoon":"Harpoon",
@@ -163,6 +165,7 @@
   "entity.goety.scythe":"Scythe Slash",
   "entity.goety.soul_bullet":"Soul Bullet",
   "entity.goety.soul_bolt":"Soul Bolt",
+  "entity.goety.steam_missile":"Steam Missile",
   "entity.goety.hell_bolt":"Hell Bolt",
   "entity.goety.hell_blast":"Hell Blast",
   "entity.goety.necro_bolt":"Necro Bolt",
@@ -491,6 +494,8 @@
   "item.goety.frost_breath_focus.info": "Shoots a torrent of frost in front of them, giving non-allied targets freezing damage.",
   "item.goety.ice_spike_focus": "Ice Spike Focus",
   "item.goety.ice_spike_focus.info": "Shoots an Ice Spike. Ice Spikes deals small freezing damage and gives target Freezing for a short time.",
+  "item.goety.ice_storm_focus": "Ice Storm Focus",
+  "item.goety.ice_storm_focus.info": "Shoots an Ice Storm that damages targets within its radius with freezing damage and gives Freezing for a short time. Can pass through blocks but moves slowly.",
   "item.goety.hail_focus": "Hail Focus",
   "item.goety.hail_focus.info": "Summons a cloud above a location or target that causes any non-allied targets beneath it to take freezing damage.",
   "item.goety.updraft_focus": "Updraft Focus",
@@ -972,6 +977,7 @@
   "enchantment.goety.burning": "Burning",
   "enchantment.goety.absorb": "Life Absorb",
   "enchantment.goety.duration": "Duration",
+  "enchantment.goety.velocity": "Velocity",
   "enchantment.goety.soul_eater.desc": "Increases the amount of Soul Energy gained after killing a mob.",
   "enchantment.goety.wanting.desc": "Mobs will drop more loot when killed via Summoned Creatures/Spells.",
   "enchantment.goety.potency.desc": "Increases the damage of Spells.",
@@ -980,6 +986,7 @@
   "enchantment.goety.burning.desc": "Makes Spells burn mobs or increase duration of fire.",
   "enchantment.goety.absorb.desc": "Causes the player to heal when Spells damages mob.",
   "enchantment.goety.duration.desc": "Increases the duration of Spells.",
+  "enchantment.goety.velocity.desc": "Increases the speed and velocity of magic projectiles.",
 
   "key.goety.category": "Goety",
   "key.goety.wand": "Open Wand Focus Slot",
@@ -1452,15 +1459,19 @@
   "subtitle.goety.soul_armor": "Apply Armor",
   "subtitle.goety.soul_heal": "Soul Heal",
   "subtitle.goety.prepare_spell": "Prepares Spell",
+  "subtitle.goety.frost_prepare_spell": "Prepares Spell",
+  "subtitle.goety.wild_prepare_spell": "Prepares Spell",
   "subtitle.goety.prepare_summon": "Prepares Summon",
   "subtitle.goety.cast_spell": "Casts Spell",
   "subtitle.goety.necro_cast": "Casts Spell",
   "subtitle.goety.summon_spell": "Summon Spell",
   "subtitle.goety.vanguard_spell": "Casts Spell",
   "subtitle.goety.vanguard_summon": "Summon Spell",
+  "subtitle.goety.cast_steam": "Casts Spell",
   "subtitle.goety.command": "Command",
   "subtitle.goety.shield_up": "Shield up",
   "subtitle.goety.bolt_impact": "Soul Bolt Impact",
+  "subtitle.goety.steam_impact": "Steam Missile Impact",
   "subtitle.goety.hell_bolt_shoot": "Hell Bolt Shoot",
   "subtitle.goety.hell_bolt_impact": "Hell Bolt Impact",
   "subtitle.goety.hell_blast_shoot": "Hell Blast Shoot",
