Fixed more stuff and improved some brews.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -101,6 +101,7 @@
   "entity.goety.mossy_skeleton_servant":"Mossy Skeleton Servant",
   "entity.goety.sunken_skeleton_servant":"Sunken Skeleton Servant",
   "entity.goety.necromancer_servant":"Necromancer Servant",
+  "entity.goety.cairn_necromancer_servant":"Cairn Necromancer Servant",
   "entity.goety.vanguard_servant":"Vanguard Servant",
   "entity.goety.wraith_servant":"Wraith Servant",
   "entity.goety.border_wraith_servant":"Border Wraith Servant",
@@ -983,7 +984,7 @@
   "effect.goety.iron_hide": "Iron Hide",
   "effect.goety.iron_hide.description": "Increases armor points by 4 per level.",
   "effect.goety.pressure": "Pressure",
-  "effect.goety.pressure.description": "Creepers will explode nigh-instantly towards targets with this effect.",
+  "effect.goety.pressure.description": "Periodically damages the affected when surrounded by multiple entities.",
   "effect.goety.charged": "Charged",
   "effect.goety.charged.description": "Level I gives 10% boost to speed and melee damage, Level II gives 25% boost to speed and reduction in melee damage. Gaining another Level will give damage.",
   "effect.goety.ender_ground": "Ender Ground",
@@ -1524,6 +1525,12 @@
   "subtitle.goety.ravaged_step": "Ravaged steps",
   "subtitle.goety.ravaged_death": "Ravaged dies",
 
+  "subtitle.goety.bone_spider_ambient":"Bone Spider hisses",
+  "subtitle.goety.bone_spider_step": "Bone Spider crawls",
+  "subtitle.goety.bone_spider_hurt": "Bone Spider hurts",
+  "subtitle.goety.bone_spider_spit": "Bone Spider spits",
+  "subtitle.goety.bone_spider_death": "Bone Spider dies",
+
   "subtitle.goety.iceologer_ambient": "Iceologer grunts",
   "subtitle.goety.iceologer_hurt": "Iceologer hurts",
   "subtitle.goety.iceologer_attack": "Iceologer cast spell",
@@ -1686,6 +1693,7 @@
   "subtitle.goety.frost_breath": "Breathing Frosts",
   "subtitle.goety.soul_armor": "Apply Armor",
   "subtitle.goety.soul_heal": "Soul Heal",
+  "subtitle.goety.end_walk": "Shadow shifts",
   "subtitle.goety.prepare_spell": "Prepares Spell",
   "subtitle.goety.frost_prepare_spell": "Prepares Spell",
   "subtitle.goety.wild_prepare_spell": "Prepares Spell",
@@ -1943,6 +1951,8 @@
   "advancements.goety.summon_skeleton.description": "Summon a Skeleton Servant.",
   "advancements.goety.summon_wraith.title": "Peek-A-Boo",
   "advancements.goety.summon_wraith.description": "Summon a Wraith Servant.",
+  "advancements.goety.summon_spider.title": "Creepy Crawlies",
+  "advancements.goety.summon_spider.description": "Summon a Spider Servant.",
   "advancements.goety.summon_blaze.title": "Burn It Down",
   "advancements.goety.summon_blaze.description": "Summon a Blaze Servant.",
   "advancements.goety.summon_slime.title": "Kids' Choice Awards",
