Fixed Crone Hat crash and added new brew.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -1103,6 +1103,7 @@
   "effect.goety.brew_dye": "Brew Dye",
   "effect.goety.part_water": "Part Water",
   "effect.goety.part_lava": "Part Lava",
+  "effect.goety.raise_dead": "Raise Dead",
   "effect.goety.purify_debuff": "Purify Debuffs",
   "effect.goety.purify_buff": "Purify Buffs",
 
@@ -1295,6 +1296,7 @@
   "info.goety.taglock.discover": "Someone tried to taglock you, but failed!",
   "info.goety.taglock.difDimension": "Tagged Entity is too far away!",
   "info.goety.brew.level_up": "You're getting more skilled at brewing, more brews can be bottled!",
+  "info.goety.brew.max_level": "You have mastered the art of brewing!",
   "info.goety.lichdom.success": "You have ascended your mortal coil!",
   "info.goety.lichdom.fail": "You didn't prepare yourself properly to drink the potion!",
   "info.goety.lichdom.disable": "Lichdom is disabled",
@@ -1819,6 +1821,13 @@
   "commands.goety.brew.level.add.success.multiple": "Add %s bottling levels for %s players",
   "commands.goety.brew.level.set.success.single": "Set %s bottling levels for %s",
   "commands.goety.brew.level.set.success.multiple": "Set %s bottling levels for %s players",
+  "commands.goety.brew.level.set.failure": "Error for setting bottling level",
+  "commands.goety.brew.xp.get.success": "%s has %s bottling xp",
+  "commands.goety.brew.xp.add.success.single": "Add %s bottling xp on %s",
+  "commands.goety.brew.xp.add.success.multiple": "Add %s bottling xp for %s players",
+  "commands.goety.brew.xp.set.success.single": "Set %s bottling xp for %s",
+  "commands.goety.brew.xp.set.success.multiple": "Set %s bottling xp for %s players",
+  "commands.goety.brew.xp.set.failure": "Error for setting bottling xp",
 
   "advancements.goety.root.title": "The Dark Arts",
   "advancements.goety.root.description": "Get started on your journey",
