Fixed Server bug and added some advancements.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -1217,7 +1217,7 @@
   "info.goety.necro_cape": "Allows undead servants heal using soul energy.",
   "info.goety.necro_cape_power": "Certain newly summoned undead servants gain extra abilities.",
   "info.goety.illusion_robe": "Improves the Mirror spell.",
-  "info.goety.frost_robe": "+%s%% resistance to freezing damage, immunity to powder snow.",
+  "info.goety.frost_robe": "+%s%% resistance to freezing damage, immunity to powder snow. Allows frost servants heal using soul energy.",
   "info.goety.frost_robe_discount": "Halves soul cost of frost spells.",
   "info.goety.wild_robe": "Immunity to poison and acid venom. Allows natural servants heal using soul energy.",
   "info.goety.wild_robe_discount": "Halves soul cost of wild spells.",
@@ -1895,6 +1895,8 @@
   "advancements.goety.craft_grave_gloves.description": "Increases Attack Speed of Scythes.",
   "advancements.goety.craft_dark_scythe.title": "Slice and Dice",
   "advancements.goety.craft_dark_scythe.description": "Grants Soul Energy with each hit. Attack Speed increases if not holding anything offhand.",
+  "advancements.goety.craft_feline_amulet.title": "Catatonic Catastrophe",
+  "advancements.goety.craft_feline_amulet.description": "Scares away nearby Creepers when worn.",
   "advancements.goety.craft_star_amulet.title": "Anti-Pincushion",
   "advancements.goety.craft_star_amulet.description": "Protects wearer from arrows when under half the max health.",
   "advancements.goety.craft_ring_of_want.title": "...I Want It That Way!",
@@ -1903,6 +1905,10 @@
   "advancements.goety.craft_ring_of_force.description": "Using Telekinesis spell on a mob or player will cause them to slowly lose breath and chock.",
   "advancements.goety.craft_ring_of_the_dragon.title": "Took a Mint",
   "advancements.goety.craft_ring_of_the_dragon.description": "Powers up Fire and Frost Breath Spells.",
+  "advancements.goety.craft_shade_gravestone.title": "The Restless Dead",
+  "advancements.goety.craft_shade_gravestone.description": "Summons Zombie Servants when inserting an Iron Ingot on it.",
+  "advancements.goety.craft_blazing_cage.title": "Unending Flames",
+  "advancements.goety.craft_blazing_cage.description": "Summons Blaze Servants when inserting a Magma Block or a Bucket of Lava on it.",
   "advancements.goety.craft_sculk_converter.title": "How Bad Can I Be?",
   "advancements.goety.craft_sculk_converter.description": "Absorbs Soul Energy, from the Cursed Cage above it, to grow Sculk around itself.",
   "advancements.goety.craft_sculk_grower.title": "Let It Grow",
@@ -1914,7 +1920,11 @@
   "advancements.goety.craft_witch_hat.title": "We've Found a Witch!",
   "advancements.goety.craft_witch_hat.description": "Craft or find a Witches Hat, which gives a chance of not consuming a Potion.",
   "advancements.goety.craft_witch_robe.title": "May We Burn Her?",
-  "advancements.goety.craft_witch_robe.description": "Witches Robes gives 85% magic protection and portable brewing. Wearing both Robe and Hat makes Witches neutral.",
+  "advancements.goety.craft_witch_robe.description": "Witches Robes gives, by default, 85% magic protection and portable brewing. Wearing both Robe and Hat makes Witches and Warlocks neutral.",
+  "advancements.goety.craft_warlock_robe.title": "Warts and All",
+  "advancements.goety.craft_warlock_robe.description": "Warlock Robes gives, by default, 85% magic protection and improves Wartful Eggs and Snap Fungi usage. Wearing it makes Witches and Warlocks neutral.",
+  "advancements.goety.craft_nether_robe.title": "Disco Inferno",
+  "advancements.goety.craft_nether_robe.description": "Nether Robes gives, by default, 85% fire protection and gives discount to Nether Spells. Wearing it makes Witches and Warlocks neutral.",
   "advancements.goety.craft_necro_set.title": "Really Late Healer",
   "advancements.goety.craft_necro_set.description": "Wearing Necro Crown and Cape causes none boss Undead to be Neutral. Necro Staff powers Necromantic Spells.",
   "advancements.goety.craft_nameless_set.title": "The Great Necromancer",
@@ -1953,6 +1963,8 @@
   "advancements.goety.craft_death_scythe.description": "At full power, can let loose a projectile that slashes everything in its vicinity.",
   "advancements.goety.get_hammer.title": "Hammer Time!",
   "advancements.goety.get_hammer.description": "Obtain a Great Hammer, a powerful weapon or tool. Attack Speed increases if not holding anything offhand.",
+  "advancements.goety.get_bonehead_hammer.title": "The Bone Zone",
+  "advancements.goety.get_bonehead_hammer.description": "Obtain a Bonehead Hammer, a hammer variant that pulls nearby non-allied mobs when hit at full-power.",
   "advancements.goety.get_stormlander.title": "Power of the Storm",
   "advancements.goety.get_stormlander.description": "Obtain the Stormlander, the treasure of the Illagers.",
   "advancements.goety.get_shrouded_blueprint.title": "Unreadable File",
@@ -1963,6 +1975,8 @@
   "advancements.goety.kill_vizier.description": "Defeated a Vizier, royal official of the Illagers.",
   "advancements.goety.servant_kill_mob.title": "Good Soldiers Follow Orders",
   "advancements.goety.servant_kill_mob.description": "Have a Servant kill a mob.",
+  "advancements.goety.blaze_servant_kill_blaze.title": "Fighting Fire with Fire",
+  "advancements.goety.blaze_servant_kill_blaze.description": "Have a Blaze Servant kill a Blaze.",
   "advancements.goety.servant_kill_apostle.title": "The Unchosen One",
   "advancements.goety.servant_kill_apostle.description": "Have a Servant defeat an Apostle.",
   "advancements.goety.respawn_miniboss.title": "Here We Go Again...",
